syntax = "proto3";
package yokai_game;

option go_package = "github.com/yokaiio/yokai_server/proto/game";

import "account/account.proto";

////////////////////////////////////////////////
// player
message LitePlayer {
    int64 id = 1;
    int64 account_id = 2;
    string name = 3;
    int64 exp = 4;
    int32 level = 5;
}

message PlayerInfo{
    LitePlayer lite_info = 1; 
    int32 hero_nums = 2;
    int32 item_nums = 3;
}

message MC_CreatePlayer {
    string name = 1;
}

message MS_CreatePlayer {
    PlayerInfo info = 1;
    int32 error_code = 2;
}

message MC_SelectPlayer {
    int64 id = 1;
}

message MS_SelectPlayer {
    PlayerInfo info = 1;
    int32 error_code = 2;
}

message MC_ExpirePlayer {
}

message MC_QueryPlayerInfos {
}

message MS_QueryPlayerInfo {
    PlayerInfo info = 1;
}

message MS_QueryPlayerInfos {
    repeated PlayerInfo infos = 1;
}

message MC_ChangeExp {
    int64 add_exp = 1;
}

message MS_ExpUpdate {
    int64 exp = 1;
}

message MC_ChangeLevel {
    int32 add_level = 1;
}

message MS_LevelUpdate {
    int32 level = 1;
}


///////////////////////////////////////////////////
// service
///////////////////////////////////////////////////
service GameService {
    rpc GetAccountByID (GetAccountByIDRequest) returns (GetAccountByIDReply) {}
    rpc GetLitePlayer (GetLitePlayerRequest) returns (GetLitePlayerReply) {}
}

message GetAccountByIDRequest {
    int64 id = 1;
}

message GetAccountByIDReply {
    yokai_account.AccountInfo info = 1;
}

message GetLitePlayerRequest {
    int64 id = 1;
}

message GetLitePlayerReply {
    LitePlayer info = 1;
}

